--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "CommonJS",
-    "outDir": "./lib",
-    "strict": true,
-    "esModuleInterop": true
+    "target": "es6" /* Specify ECMAScript target version */,
+    "module": "commonjs" /* Specify module code generation */,
+    "strict": true /* Enable all strict type-checking options */,
+    "esModuleInterop": true /* Enables interoperability between CommonJS and ES Modules */,
+    "skipLibCheck": true /* Skip type checking of declaration files */,
+    "forceConsistentCasingInFileNames": true /* Ensure consistent file casing */,
+    "outDir": "./dist" /* Redirect output structure to the directory */,
+    "rootDir": "./src" /* Specify the root directory of input files */,
+    "declaration": true /* Generates corresponding '.d.ts' file */,
+    "declarationDir": "./dist" /* Output directory for generated declaration files */,
+    "types": ["node"] /* Include Node.js typings */,
+    "resolveJsonModule": true /* Allow importing JSON modules */,
+    "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export */
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["src/**/*.ts" /* Include TypeScript files to compile */],
+  "exclude": ["node_modules" /* Exclude node_modules directory */]
 }
